# qiskit-rigetti

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  binder-requirements.txt  docker-compose.yaml  mypy.ini  package.json  prepare_release.sh  pyproject.toml  readthedocs.yml  setup.py  tox.ini
.devcontainer/: devcontainer.dockerfile  devcontainer.json
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.md
docs/api/: index.rst
docs/api/subpackages/: gates.rst  hooks_pre_compilation.rst  hooks_pre_execution.rst  index.rst
docs/examples/: GettingStarted.ipynb  QAOA.ipynb  QAOAFromPyQuil.ipynb  qaoa_pyquil.ipynb  qaoa_qiskit.ipynb
qiskit_rigetti/: __init__.py  _qcs_backend.py  _qcs_job.py  _qcs_provider.py  _quil_circuit.py
qiskit_rigetti/gates/: _can.py  _cphase.py  _pswap.py  _xy.py
qiskit_rigetti/hooks/: __init__.py  pre_compilation.py
qiskit_rigetti_provider/: __init__.py  _qcs_backend.py  _qcs_job.py  _qcs_provider.py  _quil_circuit.py  qcs_backend.py  qcs_job.py  qcs_provider.py  quil_circuit.py
qiskit_rigetti_provider/gates/: __init__.py  _can.py  _cphase.py  _pswap.py  _xy.py  can.py  cphase.py  pswap.py  xy.py
qiskit_rigetti_provider/hooks/: pre_compilation.py  pre_execution.py
scripts/: ci_install_deps
tests/: test_execute.py  test_gates.py  test_hooks.py  test_qcs_backend.py  test_qcs_job.py  test_qcs_provider.py  test_quil_circuit.py
