[tool.poetry]
name = "qiskit-rigetti"
version = "0.4.6-rc.2"
description = "Provider for running Qiskit circuits on Rigetti QPUs and simulators."
authors = ["Rigetti Computing"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rigetti/qiskit-rigetti"
documentation = "https://qiskit-rigetti.readthedocs.io"
keywords = ["Qiskit", "Quil", "Rigetti", "pyQuil", "Quantum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Other",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
qiskit = "^0.34.0"
pyquil = "^3.0.0"
numpy = "^1.20.1"
importlib_metadata = {version = "*", python = "<3.8"}
sphinx = { version = "^4.1.1", optional = true }
sphinx-autoapi = { version = "^1.8.1", optional = true }
furo = { version = "^2021.7.5-beta.38", optional = true }
myst-parser = { version = "^0.15.1", optional = true }
sphinx-autobuild = { version = "^2021.3.14", optional = true }
nbsphinx = { version = "^0.8.6", optional = true }
ipython = {version = "^7.25.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-httpx = "^0.9"
mypy = "^0.800"
pytest-mock = "^3.6.1"
pip-licenses = "^3.5.1"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autoapi", "furo", "myst-parser", "sphinx-autobuild", "nbsphinx", "ipython"]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # black-default
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
